# serializer version: 1
# name: test_diagnostics_cloudhook_instance
  dict({
    'has_cloudhooks': True,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': list([
      list([
        1,
        None,
      ]),
      list([
        5,
        None,
      ]),
      list([
        8,
        None,
      ]),
      list([
        76,
        None,
      ]),
      list([
        77,
        None,
      ]),
      list([
        88,
        None,
      ]),
      list([
        168,
        None,
      ]),
      list([
        169,
        None,
      ]),
      list([
        170,
        None,
      ]),
      list([
        173,
        12,
      ]),
      list([
        173,
        10,
      ]),
      list([
        173,
        3,
      ]),
      list([
        173,
        11,
      ]),
      list([
        173,
        2,
      ]),
      list([
        174,
        12,
      ]),
      list([
        174,
        10,
      ]),
      list([
        174,
        3,
      ]),
      list([
        174,
        11,
      ]),
      list([
        174,
        2,
      ]),
      list([
        175,
        12,
      ]),
      list([
        175,
        10,
      ]),
      list([
        175,
        3,
      ]),
      list([
        175,
        11,
      ]),
      list([
        175,
        2,
      ]),
      list([
        0,
        None,
      ]),
      list([
        6,
        None,
      ]),
      list([
        4,
        None,
      ]),
      list([
        12,
        None,
      ]),
      list([
        71,
        None,
      ]),
      list([
        73,
        None,
      ]),
      list([
        9,
        None,
      ]),
      list([
        10,
        None,
      ]),
      list([
        11,
        None,
      ]),
      list([
        54,
        None,
      ]),
      list([
        91,
        None,
      ]),
      list([
        123,
        None,
      ]),
      list([
        155,
        None,
      ]),
      list([
        198,
        None,
      ]),
      list([
        197,
        None,
      ]),
      list([
        196,
        None,
      ]),
    ]),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
# name: test_diagnostics_polling_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': False,
    'received_activity_data': False,
    'received_measurements': list([
      list([
        1,
        None,
      ]),
      list([
        5,
        None,
      ]),
      list([
        8,
        None,
      ]),
      list([
        76,
        None,
      ]),
      list([
        77,
        None,
      ]),
      list([
        88,
        None,
      ]),
      list([
        168,
        None,
      ]),
      list([
        169,
        None,
      ]),
      list([
        170,
        None,
      ]),
      list([
        173,
        12,
      ]),
      list([
        173,
        10,
      ]),
      list([
        173,
        3,
      ]),
      list([
        173,
        11,
      ]),
      list([
        173,
        2,
      ]),
      list([
        174,
        12,
      ]),
      list([
        174,
        10,
      ]),
      list([
        174,
        3,
      ]),
      list([
        174,
        11,
      ]),
      list([
        174,
        2,
      ]),
      list([
        175,
        12,
      ]),
      list([
        175,
        10,
      ]),
      list([
        175,
        3,
      ]),
      list([
        175,
        11,
      ]),
      list([
        175,
        2,
      ]),
      list([
        0,
        None,
      ]),
      list([
        6,
        None,
      ]),
      list([
        4,
        None,
      ]),
      list([
        12,
        None,
      ]),
      list([
        71,
        None,
      ]),
      list([
        73,
        None,
      ]),
      list([
        9,
        None,
      ]),
      list([
        10,
        None,
      ]),
      list([
        11,
        None,
      ]),
      list([
        54,
        None,
      ]),
      list([
        91,
        None,
      ]),
      list([
        123,
        None,
      ]),
      list([
        155,
        None,
      ]),
      list([
        198,
        None,
      ]),
      list([
        197,
        None,
      ]),
      list([
        196,
        None,
      ]),
    ]),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': False,
  })
# ---
# name: test_diagnostics_webhook_instance
  dict({
    'has_cloudhooks': False,
    'has_valid_external_webhook_url': True,
    'received_activity_data': False,
    'received_measurements': list([
      list([
        1,
        None,
      ]),
      list([
        5,
        None,
      ]),
      list([
        8,
        None,
      ]),
      list([
        76,
        None,
      ]),
      list([
        77,
        None,
      ]),
      list([
        88,
        None,
      ]),
      list([
        168,
        None,
      ]),
      list([
        169,
        None,
      ]),
      list([
        170,
        None,
      ]),
      list([
        173,
        12,
      ]),
      list([
        173,
        10,
      ]),
      list([
        173,
        3,
      ]),
      list([
        173,
        11,
      ]),
      list([
        173,
        2,
      ]),
      list([
        174,
        12,
      ]),
      list([
        174,
        10,
      ]),
      list([
        174,
        3,
      ]),
      list([
        174,
        11,
      ]),
      list([
        174,
        2,
      ]),
      list([
        175,
        12,
      ]),
      list([
        175,
        10,
      ]),
      list([
        175,
        3,
      ]),
      list([
        175,
        11,
      ]),
      list([
        175,
        2,
      ]),
      list([
        0,
        None,
      ]),
      list([
        6,
        None,
      ]),
      list([
        4,
        None,
      ]),
      list([
        12,
        None,
      ]),
      list([
        71,
        None,
      ]),
      list([
        73,
        None,
      ]),
      list([
        9,
        None,
      ]),
      list([
        10,
        None,
      ]),
      list([
        11,
        None,
      ]),
      list([
        54,
        None,
      ]),
      list([
        91,
        None,
      ]),
      list([
        123,
        None,
      ]),
      list([
        155,
        None,
      ]),
      list([
        198,
        None,
      ]),
      list([
        197,
        None,
      ]),
      list([
        196,
        None,
      ]),
    ]),
    'received_sleep_data': True,
    'received_workout_data': True,
    'webhooks_connected': True,
  })
# ---
